# school-timetable-system

./: Class of 2022.csv  Class of 2023.csv
IA/: AddStudent.qml  AddSubject.qml  AddTeacher.qml  AddUser.qml  CMakeLists.txt  Login.qml  SettingsMenu.qml  StudentLocator.qml  ViewSingleBatch.qml  ViewStudents.qml  ViewTeachers.qml  YTeacherView.qml  database.cpp  database.h  global.cpp  global.h  main.cpp  main.qml  studentlist.cpp  studentlist.h  studentmodel.cpp  studentmodel.h  subjectlist.cpp  subjectlist.h  subjectmodel.cpp  subjectmodel.h  teacherlist.cpp  teacherlist.h  teachermodel.cpp  teachermodel.h
build-IA-Qt_6_4_1_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  appia_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-IA-Qt_6_4_1_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-IA-Qt_6_4_1_for_macOS-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appIA.cmake  Qt6_QmlPlugins_Imports_appIA.rsp
build-IA-Qt_6_4_1_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-IA-Qt_6_4_1_for_macOS-Debug/.rcc/: appIA_raw_qml_0.qrc  qmake_IA.qrc  qrc_appIA_raw_qml_0.cpp  qrc_qmake_IA.cpp
build-IA-Qt_6_4_1_for_macOS-Debug/IA/: CoolButton.qml  EditStudent.qml  EditSubject.qml  EditTeacher.qml  HomeForm.qml  InputField.qml  MainMenu.qml  Page1Form.qml  Page2Form.qml  Page3Form.qml  SquareButton.qml  StudentDatabase.qml  ViewSingleStudent.qml  ViewSingleTeacher.qml  ViewSubjects.qml  YButton.qml  YCheckBox.qml  YComboBox.qml  YStudentView.qml  YSubjectView.qml  YTextField.qml  qmldir
build-IA-Qt_6_4_1_for_macOS-Debug/appIA_autogen/: deps  (+2 more)
(+418 files in other folders)
